# SberHomework

./: .gitignore  README.md  analyzer.py  main.py  modelBundle.py  pyproject.toml
.github/workflows/: test.yml
tests/: helpers.py  test_basic_models.py  test_huggingface_models.py
tests/data/pt1/: some.pth  some.py  some_data.json  some_hlo.txt
tests/data/pt2/: some.pth  some.py  some_data.json  some_hlo.txt
tests/data/pt3/: some.pth  some.py  some_data.json  some_hlo.txt
tests/data/pt4/: some.py  some_hlo.txt
tests/data/pt5/: some.pth  some.py  some_data.json  some_hlo.txt
